# videore

./: .gitignore  link.ld  nix-cmake.sh  nix-run.sh  shell.nix
src/: CMakeLists.txt  Main.cpp  entry.s
src/inc/: Console.cpp  Console.hpp  Core.hpp  Iterator.hpp  Mem.cpp  Mem.hpp  Memory.cpp  Memory.hpp  Runtime.cpp  String.cpp  String.hpp
src/inc/dev/crystall/: Aux.cpp  Aux.hpp  Crystall.hpp  Gpio.cpp  Gpio.hpp
src/inc/lib/: Mmio.hpp
